src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__two_cycles_with_branch.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `F -> G -> H -> I -> F` has infinite size
   ┌─ <internal>:18:18
   │
18 │             TYPE F : STRUCT
   │                  ^
   │                  │
   │                  Recursive data structure `F -> G -> H -> I -> F` has infinite size
   │                  see also
   ·
23 │             TYPE G : STRUCT
   │                  - see also
   ·
27 │             TYPE H : STRUCT
   │                  - see also
   ·
31 │             TYPE I : STRUCT
   │                  - see also

error[E029]: Recursive data structure `B -> C -> E -> F -> B` has infinite size
   ┌─ <internal>:6:18
   │
 6 │             TYPE B : STRUCT
   │                  ^
   │                  │
   │                  Recursive data structure `B -> C -> E -> F -> B` has infinite size
   │                  see also
   ·
10 │             TYPE C : STRUCT
   │                  - see also
   ·
14 │             TYPE E : STRUCT
   │                  - see also
   ·
18 │             TYPE F : STRUCT
   │                  - see also
